<resources>
    <string name="app_name">Tabatimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="settings_language_category">Localisation</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_summary">Language for the app</string>
    <string name="settings_font_category">Font</string>
    <string name="settings_font_title">Font size</string>
    <string name="settings_font_summary">Font of such size you will see in app</string>
    <string name="settings_theme_category">Design</string>
    <string name="settings_theme_title">Night theme</string>
    <string name="settings_theme_summary">Enable night theme to use app at night without eyes hurting</string>
    <string name="settings_datakill_category">Data</string>
    <string name="settings_datakill_title">Clear all data</string>
    <string name="settings_datakill_summary">All sets and items will be deleted permanently</string>
    <string name="settings_datakill_button">Clear</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="start_question">Start?</string>
    <string name="set_list">Set list</string>
    <string name="edit">Ok</string>
    <string name="pick_color">Pick color</string>
    <string name="name">Name</string>
    <string name="set_editing">Set editing</string>
    <string name="item_list">Item list</string>
    <string name="duration_sec">Duration (sec)</string>
    <string name="messages_header">Messages</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="edited_successfully">Edited successfully</string>
    <string name="choose_color">Choose color</string>
    <string name="deleted_successfully">Deleted successfully</string>
</resources>