<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.TabataItemEditFragment"
    android:tag="EditItem"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_editing"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edit_item_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:text="" />
        <EditText
            android:id="@+id/edit_item_duration_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/duration_sec"
            android:text="" />

        <Button
            android:id="@+id/color_pick_dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/purple_200"
            android:text="@string/pick_color" />
        <Button
            android:id="@+id/edit_item_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/edit"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</FrameLayout>